[gd_scene load_steps=13 format=2]

[ext_resource path="res://quest/Retangulo.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/dialog_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://quest/DialogController.gd" type="Script" id=3]
[ext_resource path="res://quest/Interface.gd" type="Script" id=4]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://quest/Relogio.gd" type="Script" id=6]
[ext_resource path="res://quest/QuestDisplay.gd" type="Script" id=7]
[ext_resource path="res://quest/Pedido.tscn" type="PackedScene" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "show_dialog"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DialogBox:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 82, 620 ), Vector2( 82, 400 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
sprite = ExtResource( 9 )

[node name="DialogController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="DialogController" instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -430.0
margin_top = 20.0
margin_right = 430.0
margin_bottom = 185.0
color = Color( 0, 0.478431, 0.945098, 0.384314 )

[node name="Label" type="Label" parent="DialogController/DialogBox"]
margin_left = 24.0
margin_top = 18.0
margin_right = 835.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 2 )
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogController"]
anims/show_dialog = SubResource( 1 )

[node name="TextScroll" type="Timer" parent="DialogController"]
wait_time = 0.05

[node name="Relogio" type="Label" parent="."]
margin_left = 833.52
margin_top = 16.0
margin_right = 1001.52
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "00:00
"
align = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Relogio"]
autostart = true

[node name="QuestDisplay" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = -256.0
margin_top = -114.0
margin_right = -18.0
margin_bottom = 37.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
cena_pedido = ExtResource( 8 )

[node name="Count" type="Label" parent="QuestDisplay"]
margin_left = 144.622
margin_top = -47.1454
margin_right = 240.622
margin_bottom = -9.14543
custom_fonts/font = SubResource( 3 )
text = "3/8"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="DialogController/AnimationPlayer" to="DialogController" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DialogController/TextScroll" to="DialogController" method="_on_TextScroll_timeout"]
[connection signal="timeout" from="Relogio/Timer" to="Relogio" method="_on_Timer_timeout"]
